syntax = "proto3";
option java_multiple_files = true;
option java_package = "MahJavaLib";

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string greeting = 1;
}

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}